manifests/victoria-metrics/resources/service-auth.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: auth
  namespace: victoria-metrics
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
