manifests/victoria-metrics/resources/ingress-long.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: |-
      http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://${longhostname}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
  name: victoria-metrics-long
  namespace: victoria-metrics
spec:
  ingressClassName: nginx
  rules:
  - host: ${longhostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vmsingle-vmsingle-long
            port:
              number: 8428
      - path: /outpost.goauthentik.io
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth
            port:
              number: 80
  tls:
  - hosts:
    - ${longhostname}
    secretName: victoria-metrics-long-tls
